# ThreadForge

./: .gitignore  README.md  pyproject.toml
api/: .gitignore  README.md  ThreadForge.slnx
api/ThreadForge.Api/: Models.cs  (+5 more)
config/: default.json
data/: README.md
docs/: signal-detection-math.md
labels/: windows.json
scripts/: benchmark.py  compare_neural.py  cross_validate.py  domain_adapt.py  drift.py  evolve_live.py  evolve_traders.py  flip_flop.py  inspect_store.py  learn_signal_weights.py  promote.py  registry.py  reverse_lens.py  run_detection.py  run_forecast.py  run_lstm_forecast.py  run_promote_online.py  run_tab.py  shadow.py  stream.py  surf.py  train_baseline.py  train_encoder.py  train_temporal.py  trend_overlay.py  tune_hyperparams.py  walk_forward.py
tests/: test_adaptive_calibrator.py  test_autocorrelation.py  test_data.py  test_detector.py  test_domain_adapt.py  test_drift.py  test_evaluation.py  test_evolving.py  test_forecast_detector.py  test_genetic.py  test_hilbert.py  test_incremental_signals.py  test_leveraged.py  test_market.py  test_models.py  test_nab_scoring.py  test_neural_forecast.py  test_neural_policy.py  test_oracle.py  test_parquet_store.py  test_policy.py  test_promotion.py  test_recurrent_policy.py  test_registry.py  test_scorer.py  test_shadow.py  test_signals.py  test_sizing.py  test_spectral_flatness.py  test_state.py  test_statistics.py  test_store.py  test_streaming.py  test_tab_affiliation.py  test_tab_loader.py  test_tab_scoring.py  test_torch_forecaster.py  test_torch_model.py  test_trend.py  test_walkforward.py  (+1 more)
(+68 files in other folders)
