[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threadforge"
version = "0.1.0"
description = "A streaming anomaly-detection system."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pyarrow>=14"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
